[package]
name = "kobold-cloud"
version = "0.1.0"
edition = "2021"
description = "Cloud landing-plan generator for decoded COBOL datasets: emits a deterministic deployment manifest (object-store path layout, catalog DDL, partition plan, format/compression choice, ingestion checklist) for S3, AWS Glue, Snowflake, and Databricks targets. Plans only -- performs no network I/O."
authors = ["infinityabundance"]
license = "Apache-2.0"
repository = "https://github.com/infinityabundance/kobold-cloud"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
